# browsergrid

./: .air.toml  .air.worker.toml  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  architecture.mdd  atlas.hcl  env.example  pyproject.toml  pytest.ini  requirements.txt  todo.md  webhook-proposal.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  branch-protection.yml  labels.yml
.github/ISSUE_TEMPLATE/: version_question.md
.github/workflows/: azure-acr.yml  build-browsers.yml  build-chrome.yml  build-chromium.yml  build-firefox.yml  build-webkit.yml  check-browser-versions.yml  check-playwright-version.yml  get-browser-version.yml  publish-browsers.yml  schedule-browser-updates.yml  versioning.yml
browserfleet/client/: __init__.py  worker.py  workerpool_cli.py
browserfleet/server/: README.md  app.py  manage.py  manager.py
browsergrid/: go.mod  go.sum
browsergrid/docs/: docs.go  swagger.json  swagger.yaml
browsergrid/migrations/: 20250101000000_remove_worker_architecture.sql  20250623014706.sql  20250701062358_add_worker_unique_constraint.sql  20250712193159.sql  20250713000819.sql  20250713031414.sql  20250714223652.sql  atlas.sum
docker/: docker-compose.browser.yml  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.session.yml  docker-compose.yml
docker/browsermux/: Dockerfile  README.md  go.mod
docker/cua/: Dockerfile  package-lock.json  package.json
docs/: versioning.md
examples/: browsergrid.json  deployment-demo.js  index.js  package.json
scripts/: version.py
test/: README.md  connect.js  package.json  pnpm-lock.yaml
tests/: conftest.py
ui/: README.md  orval.config.cjs  package.json  pnpm-lock.yaml
ui/src/: App.tsx
(+466 files in other folders)
